[gd_scene load_steps=11 format=3 uid="uid://3n6ngv0e6pn1"]

[ext_resource type="Script" path="res://Scripts/PlayerVan.gd" id="1_e487s"]
[ext_resource type="PackedScene" uid="uid://caub0pgty8gja" path="res://Scenes/dust_particle_node.tscn" id="2_cd7i5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7ywkk"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_skj2q"]
radius = 0.2
height = 1.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hydru"]
albedo_color = Color(0, 1, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_x1k8x"]
material = SubResource("StandardMaterial3D_hydru")
size = Vector3(1, 0.5, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2jnio"]
albedo_color = Color(0, 1, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_4d1uj"]
material = SubResource("StandardMaterial3D_2jnio")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5nrh5"]
albedo_color = Color(0.180392, 0.180392, 0.180392, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_0nkf1"]
material = SubResource("StandardMaterial3D_5nrh5")
top_radius = 0.2
bottom_radius = 0.2
height = 0.2
radial_segments = 8

[node name="PlayerVan" type="CharacterBody3D" groups=["Player"]]
floor_max_angle = 0.872665
script = ExtResource("1_e487s")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.358348, 0)
shape = SubResource("CapsuleShape3D_7ywkk")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, -0.3, -0.5)
shape = SubResource("CapsuleShape3D_skj2q")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, -0.3, 0.5)
shape = SubResource("CapsuleShape3D_skj2q")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.108348, 0)
mesh = SubResource("BoxMesh_x1k8x")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.358348, -0.5)
mesh = SubResource("BoxMesh_4d1uj")
skeleton = NodePath("../MeshInstance3D")

[node name="WheelFrontLMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 4.37114e-08, 0, -4.37114e-08, -1, 1, -4.37114e-08, 0, -0.5, -0.3, -0.5)
mesh = SubResource("CylinderMesh_0nkf1")

[node name="WheelFrontRMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, -4.37114e-08, 1.91069e-15, -1, 1, -4.37114e-08, -4.37114e-08, 0.5, -0.3, -0.5)
mesh = SubResource("CylinderMesh_0nkf1")

[node name="WheelBackLMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, -4.37114e-08, 1.91069e-15, -1, 1, -4.37114e-08, -4.37114e-08, -0.5, -0.3, 0.5)
mesh = SubResource("CylinderMesh_0nkf1")

[node name="WheelBackRMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, -4.37114e-08, 1.91069e-15, -1, 1, -4.37114e-08, -4.37114e-08, 0.5, -0.3, 0.5)
mesh = SubResource("CylinderMesh_0nkf1")

[node name="GroundRayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, -0.5)
target_position = Vector3(0, -3, 0)

[node name="GetGroundColourRayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0.5)

[node name="DustParticleNode" parent="." instance=ExtResource("2_cd7i5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, -0.5, 0.5)

[node name="DustParticleNode2" parent="." instance=ExtResource("2_cd7i5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -0.5, 0.5)
